--- a/mainwebsite-5ad455c4b2414811777258e7460bb30e81c7616d/css/journal1.css
+++ b/mainwebsite-5ad455c4b2414811777258e7460bb30e81c7616d/css/journal1.css
@@ -1441,8 +1441,6 @@ body {
   flex-direction: column;
   justify-content: center;
   /* transition removed for smooth js lerp */
-  opacity: 0.05;
-  transform: scale(0.95);
 }
 
 @media (max-width: 768px) {
